[gd_scene load_steps=12 format=2]

[ext_resource path="res://scene's/levels/Math/BG2_Landscape.png" type="Texture" id=1]
[ext_resource path="res://scene's/levels/Math/Panel.png" type="Texture" id=2]
[ext_resource path="res://scene's/levels/Math/hard_selector/cloud_animal/could_animal (6).png" type="Texture" id=3]
[ext_resource path="res://scene's/levels/Math/hard_selector/images/Select_Btn_clear.png" type="Texture" id=4]
[ext_resource path="res://scene's/levels/Math/hard_selector/images/green_new.png" type="Texture" id=5]
[ext_resource path="res://scene's/levels/Math/operate/operat_noBloc/+.png" type="Texture" id=6]
[ext_resource path="res://scene's/levels/Math/operate/operat_noBloc/-.png" type="Texture" id=7]
[ext_resource path="res://scene's/levels/Math/operate/operat_noBloc/x.png" type="Texture" id=8]
[ext_resource path="res://scene's/levels/Math/finish_game/Arrow right.png" type="Texture" id=10]
[ext_resource path="res://scene's/levels/Math/hard_selector/Selection.gd" type="Script" id=11]
[ext_resource path="res://scene's/menu/control_menu_UI.tscn" type="PackedScene" id=12]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="backrgound" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="panel" type="TextureRect" parent="backrgound"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -380.0
margin_top = -290.0
margin_right = 380.0
margin_bottom = 290.0
texture = ExtResource( 2 )
expand = true
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="Animal" type="TextureRect" parent="backrgound/panel"]
margin_left = 514.0
margin_top = -34.0
margin_right = 851.0
margin_bottom = 132.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="GridContainer" type="GridContainer" parent="backrgound/panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 171.0
margin_top = -50.0
margin_right = -265.0
margin_bottom = 50.0
rect_scale = Vector2( 1.4, 1.4 )
columns = 3
__meta__ = {
"_edit_group_": true
}

[node name="addition" type="TextureButton" parent="backrgound/panel/GridContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="op" type="TextureRect" parent="backrgound/panel/GridContainer/addition"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -15.0
margin_top = -50.0
margin_right = 15.0
margin_bottom = -10.0
rect_min_size = Vector2( 30, 40 )
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="greenlit" type="TextureRect" parent="backrgound/panel/GridContainer/addition"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.0
margin_top = -28.0
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 60, 50 )
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="minus" type="TextureButton" parent="backrgound/panel/GridContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="greenlit" type="TextureRect" parent="backrgound/panel/GridContainer/minus"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.0
margin_top = -28.0
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 60, 50 )
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="op" type="TextureRect" parent="backrgound/panel/GridContainer/minus"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -15.0
margin_top = -50.0
margin_right = 15.0
margin_bottom = -30.0
rect_min_size = Vector2( 30, 20 )
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="multiplication" type="TextureButton" parent="backrgound/panel/GridContainer"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="greenlit" type="TextureRect" parent="backrgound/panel/GridContainer/multiplication"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.0
margin_top = -28.0
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 60, 50 )
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="op" type="TextureRect" parent="backrgound/panel/GridContainer/multiplication"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -15.0
margin_top = -50.0
margin_right = 15.0
margin_bottom = -10.0
rect_min_size = Vector2( 30, 40 )
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="btn_Confirm" type="TextureButton" parent="backrgound/panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -52.0
margin_top = -171.0
margin_right = 76.0
margin_bottom = -43.0
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="control_menu_UI" parent="." instance=ExtResource( 12 )]
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="backrgound/panel/GridContainer/addition" to="backrgound/panel" method="_on_addition_pressed"]
[connection signal="pressed" from="backrgound/panel/GridContainer/minus" to="backrgound/panel" method="_on_minus_pressed"]
[connection signal="pressed" from="backrgound/panel/GridContainer/multiplication" to="backrgound/panel" method="_on_multiplication_pressed"]
[connection signal="pressed" from="backrgound/panel/btn_Confirm" to="backrgound/panel" method="_on_btn_Confirm_pressed"]
